# risc-v-isa

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: operators.hpp  range.def  range_def.hpp  riscv_isa_utility.hpp  utility.hpp
include/instruction/: instruction.hpp  instruction_visitor.hpp  privileged_instruction.hpp  rv32a.hpp  rv32i.hpp  rv32m.hpp  rv64i.hpp  rv64m.hpp  rvc.hpp  zicsr.hpp  zifencei.hpp
include/memory/: memory.hpp
include/register/: csr_register.def  csr_register.hpp  csr_register_def.hpp  integer_register.hpp  register.hpp  register_file.hpp
include/trap/: trap.hpp
src/: instruction.cpp
test/: rv32i.cpp
test/include/: instruction_test.hpp  rv32c_test.hpp  rv32i_test.hpp  test.hpp
test/integration/: exec_test.cpp  factorial_test.cpp
test/intergration/: exec.cpp  factorial_test.cpp
test/unit/: rv32i_test.cpp  rv32ic_test.cpp
